<resources>
    <string name="app_name">Travel Diary</string>
    <string name="travel_list">여행지 목록</string>
    <string name="travel_edit">여행지 입력</string>
    <string name="name">이름</string>
    <string name="title1">일기 입력</string>
    <string name="title2">여행목록</string>
    <string name="title3">여행일기</string>
    <string name="description">설명</string>
    <string name="button_upload">사진 업로드</string>
    <string name="latitude">위도</string>
    <string name="longitude">경도</string>
    <string name="button_save">일기 저장</string>
    <string name="button_map">위치 보기</string>
    <string name="title_activity_maps">Map</string>
</resources>